<resources>
    <string name="app_name">INSTABOOK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="book_select_btn">선택</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="jjim">찜</string>
    <string name="book_img">도서이미지</string>
    <string name="You_can_search_for_books_by_tag">태그로 리뷰를 검색할 수 있습니다.</string>
    <string name="search">검색</string>
    <string name="this_month_recmd">이달의 추천 도서</string>
    <string name="title_bookinfo">책 정보</string>
    <string name="title_newreview">새 리뷰 작성</string>
    <string name="thisbooktag">이 책에 등록된 태그</string>
    <string name="do_jjim">찜하기</string>
    <string name="w_review">후기 작성</string>
    <string name="add_tag">태그추가</string>
    <string name="w_content">내용을 입력하세요</string>
    <string name="add_tag_hint">#...</string>
    <string name="review_up">게시하기</string>
    <string name="book_title">제목</string>
    <string name="book_author">저자</string>
    <string name="book_pub">출판사</string>
    <string name="book_pubdate">출판일</string>


</resources>
