<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafdff"
    android:orientation="vertical"
    tools:context=".Activity.ForTag.BookInfoActivity">

    <LinearLayout
        android:id="@+id/box_back"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <FrameLayout
            android:id="@+id/bi_fr_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="30dp"
            android:background="?attr/selectableItemBackgroundBorderless">

            <ImageView
                android:id="@+id/bi_back"
                android:layout_width="25dp"
                android:layout_height="25dp"
                app:srcCompat="@drawable/back_white" />
        </FrameLayout>

        <TextView
            android:id="@+id/bi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/title_bookinfo"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/box_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/box_back"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_book"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="center_vertical" />

        <LinearLayout
            android:id="@+id/box_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:text="@string/book_title"
                    android:textColor="@color/colorText"
                    android:layout_marginHorizontal="15dp"/>
                <TextView
                    android:id="@+id/txt_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/colorText"
                    android:layout_marginHorizontal="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:text="@string/book_author"
                    android:textColor="@color/colorText"
                    android:layout_marginHorizontal="15dp"/>

                <TextView
                    android:id="@+id/txt_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/colorText"
                    android:layout_marginHorizontal="15dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:text="@string/book_pub"
                    android:textColor="@color/colorText"
                    android:layout_marginHorizontal="15dp"/>

                <TextView
                    android:id="@+id/txt_pub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/colorText"
                    android:layout_marginHorizontal="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:text="@string/book_pubdate"
                    android:textColor="@color/colorText"
                    android:layout_marginHorizontal="15dp"/>

                <TextView
                    android:id="@+id/txt_pubdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="15dp"
                    android:textColor="@color/colorText"
                    android:layout_marginHorizontal="15dp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/box_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_below="@+id/box_book">

        <TextView
            android:id="@+id/txt_tag_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:text="@string/thisbooktag"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/corner_shape_edittext">

            <TextView
                android:id="@+id/txt_tag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:background="@null"
                android:textColor="#000"
                app:layout_constraintVertical_bias="0.868"
                android:scrollHorizontally="false"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:overScrollMode="always"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:padding="5dp">

            <FrameLayout
                android:id="@+id/frg_btn_jjim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="?attr/selectableItemBackgroundBorderless">

            </FrameLayout>

            <Button
                android:id="@+id/btn_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_button_pre"
                android:text="@string/do_jjim"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>